# RAG_Fundamentales

./: RAGV2.ipynb  README.md  pyproject.toml
store/: chroma.sqlite3
store/77505bd7-2e8c-4f65-8e34-25f86a93f53c/: index_metadata.pickle
